bin/tests/snapshots/useless_has_attr__lint_d9560c7f69b706d403799f7a66c76245180b154a94fdc0b4d11154047fa9faec.snap
---
source: bin/tests/useless_has_attr.rs
---
if x ? a then x.a else b.c

---
[W19] Warning: This `if` expression can be simplified with `or`
   ╭─[<temp_file_path>:1:1]
   │
 1 │ if x ? a then x.a else b.c
   · ─────────────┬────────────  
   ·              ╰────────────── Consider using x.a or b.c instead of this if expression
───╯
