bin/tests/snapshots/useless_has_attr__lint_e7dde1e57df271deadd50da80e0a3badc6b750dc96b8607f455e544512ab64bf.snap
---
source: bin/tests/useless_has_attr.rs
---
if x.a ? b then x.a.b else default

---
[W19] Warning: This `if` expression can be simplified with `or`
   ╭─[<temp_file_path>:1:1]
   │
 1 │ if x.a ? b then x.a.b else default
   · ─────────────────┬────────────────  
   ·                  ╰────────────────── Consider using x.a.b or default instead of this if expression
───╯
